# dream-builder

./: .env  .gitignore  .prettierignore  ALPHA_TESTERS_GUIDE.md  Dockerfile  Makefile  README.md  client_secret_.json  dev.sh  docker-compose.auth-api.test.yml  docker-compose.dev.local.yml  docker-compose.test.yml  docker-compose.yml  meeting_notes.md  package-lock.json  package.json  pnpm-lock.yaml  snowpack.config.mjs  todo
apiconfig/: config.py
compose/: docker-compose.alpha.yml  docker-compose.dev.local.yml  docker-compose.stage.yml  docker-compose.test.yml  nginx.conf
database/: core.py  crud.py  enums.py  models.py  scripts.py  user_ops.py  utils.py
deployment_queue/: schemas.py  tasks.py
docker/: Dockerfile  docker-compose-dev.yaml  docker-compose.yaml
docs/: ALPHA_TESTERS_GUIDE.md
dp-builder-legacy/: .dockerignore  README.md  package.json  pnpm-lock.yaml
dream_parameters/: openai_api_config_variables.json  transformers_config_variables.json
git_storage/: git_manager.py
public/: index.html
py/: Makefile
py/server/: pyproject.toml
py/server/server/: app.py  crud.py  database.py  main.py  res.py  schemas.py
schema/: Component.json  Intent.json  IntentResource.json  Link.json  Model.json  Resource.json  Task.json  Training.json
scripts/: generate_initial_data.py  memory_wipe.sh  requirements.txt
src/: App.tsx  assets.d.ts  declaration.d.ts  store.ts
tests/: README.md  pytest.ini  requirements.txt
tools/: Makefile  run-dev.sh  (+1 more)
tools/generate_types_from_schema/: generate.py  generate.sh  package.json  pnpm-lock.yaml  pyproject.toml
(+1368 files in other folders)
